--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
      </head>
      <body>
         <div class="container">
-            <h1>I'm coding</h1>
+            <h1>I'm <span class="auto-type"></span></h1>
         </div>
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+        <script>
+            var typed = new Typed(".auto-type", {
+                strings:["coding", "sleeping", "eating"],
+                typeSpeed:150,
+                backSpeed:150, 
+                loop:true
+            })
+        </script>
      </body>
 </html>
